Протестированная стабильная версия приложения.